merge project structure to settings dialog